# basic-c

./: CMakeLists.txt  arrays.c  arrays_and_pointers.c  binary_shifts.c  bst.c  bst_tut.c  conditions.c  data_types.c  dynamic.c  fn_args.c  fn_pointers.c  forloops.c  functions.c  hello.c  linked_lists.c  multidim_arrays.c  pointer_arithmetic.c  pointers.c  recursion.c  static.c  strings.c  structures.c  union.c  whileloops.c
