cmake_minimum_required(VERSION 3.17)
project(learn_c C)

set(CMAKE_C_STANDARD 11)

add_executable(learn_c
        arrays.c
        arrays_and_pointers.c
        binary_shifts.c
        bst.c
        bst_tut.c
        conditions.c
        data_types.c
        dynamic.c
        fn_args.c
        fn_pointers.c
        forloops.c
        functions.c
        hello.c
        linked_lists.c
        multidim_arrays.c
        pointer_arithmetic.c
        pointers.c
        recursion.c
        static.c
        strings.c
        structures.c
        union.c
        whileloops.c signed_unsigned.c)
